--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo-splash-screen": "~0.27.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.0"
+    "react-native": "0.74.0",
+    "@shopify/react-native-skia": "1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
